# sawdown

./: .gitignore  README.md  TODO.md  dev.bat  pyproject.toml  setup.py
proto/: sawdown.proto
sawdown/: __init__.py  config.py  directions.py  errors.py  first_orders.py  initializers.py  integer_programs.py  meta_optimizers.py  objectives.py  opti_math.py  silo.py  steplengths.py  stoppers.py
sawdown/constraints/: __init__.py  base.py  equalities.py  inequalities.py  integerities.py  integerities.py.bak  mixins.py
sawdown/diaries/: __init__.py  async_diary.py  base.py  common.py  diary_async.py  diary_sync.py  mixin.py  mixins.py  writers.py
sawdown/optimizers/: __init__.py  base.py  branch_and_bound.py  first_orders.py  integer_program.py
sawdown/proto/: serializer.py
sawdown/symbolic/: __init__.py  api.py
src/proto/: sawdown.proto  tensorcube.proto
src/sawdown/: TODO.md  __init__.py  directions.py  objectives.py  objectives_tensorcube.py  opti_math.py  steplengths.py  stoppers.py
src/sawdown/constraints/: __init__.py  base.py  equalities.py  inequalities.py  mixins.py
src/sawdown/diaries/: base.py  common.py  diary_async.py  diary_sync.py  mixins.py  readers.py  writers.py
src/sawdown/optimizers/: base.py  branch_and_bound.py  first_orders.py  integer_program.py
src/sawdown/proto/: sawdown_pb2.py  serializer.py  tensorcube_pb2.py
src/sawdown/symbolic/: api.py
src/sawdown/tensorcube/: __init__.py
tests/: plotter.py  test_constraints.py  test_diaries.py  test_optimizers.py  test_problems.py  test_symbolic.py
(+7 files in other folders)
